--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,7 @@ starlette==0.49.3
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 uvicorn==0.39.0
+
+gunicorn==21.2.0
+streamlit==1.41.1
+requests==2.32.3
